--- a/P1/P1_presentacion/mp/Makefile
+++ b/P1/P1_presentacion/mp/Makefile
@@ -1,5 +1,5 @@
 ############################
-# Práctica 1               #
+# Práctica 1 (intro)       #
 # file: Makefile           #
 # Pedro Velasco Santana    #
 ############################
